# CPSI-27703-Intro-to-Game-Programming-Fall-2025-Starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  PHYSICS_FEATURES.md  README.md  setup.bat  vcpkg.json
assets/: assets.xml  config.xml  level.xml  level1.xml
assets/Finding Doory/Aseprite Files/: Door.aseprite  Merchant.aseprite
src/: AnimateComponent.cpp  AnimateComponent.h  BackgroundComponent.cpp  BackgroundComponent.h  Behavior1Component.h  BodyComponent.cpp  BodyComponent.h  BounceComponent.cpp  BounceComponent.h  CharacterComponent.cpp  CharacterComponent.h  Component.cpp  Component.h  ComponentFactory.h  ControlerComponent.h  ControllerComponent.cpp  ControllerComponent.h  Crate.cpp  Crate.h  DoorComponent.cpp  DoorComponent.h  Dude.cpp  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  EngineConstants.h  Game.cpp  Game.h  GameObject.h  GroundComponent.h  HealthComponent.cpp  HealthComponent.h  ImageDevice.cpp  ImageDevice.h  Input.h  InputDevice.cpp  InputDevice.h  KeyComponent.cpp  KeyComponent.h  (+23 more)
